<resources>
    <string name="app_name">Resident_Alert</string>
    <string name="surname">Nazwisko</string>
    <string name="login_btn">Zaloguj się</string>
    <string name="email">E-mail</string>
    <string name="enterEmail">Podaj e-mail</string>
    <string name="password">Hasło</string>
    <string name="enterPassword">Podaj hasło</string>
    <string name="confirmPassword">Potwierdź hasło</string>
    <string name="name">Imię</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="adress">Adres zamieszkania</string>
    <string name="blockNumber">Nr domu/bloku</string>
    <string name="city">Miasto</string>
    <string name="postalCode">Kod pocztowy</string>
    <string name="SignUp">Zarejestruj się</string>
    <string name="noAccount">Nie masz konta?</string>
    <string name="signUp_tv">Zarejestruj się</string>
    <string name="forgotPasswordtxt">"Nie pamiętasz hasła? "</string>
    <string name="forgotPasswordTv">Zresetuj hasło</string>
    <string name="logut_btn">Wyloguj się</string>
    <string name="goSignIn">Przejdź dalej</string>
    <string name="alreadyHaveAccount">"Masz już konto? "</string>
    <string name="blockLetter">Klatka</string>
    <string name="blockOfFlatNumber">Nr mieszkania</string>
    <string name="check">Sprawdź</string>
    <string name="smsInfo">Sms weryfikujący został wysłany na podany numer telefonu</string>
    <string name="back">wróć</string>
    <string name="phone">Numer Telefonu</string>
    <string name="phoneNumberEnter">Podaj numer telefonu</string>
    <string name="choose">Wybierz:</string>
    <string name="Next">Dalej</string>
    <string name="save">Zapisz</string>
    <string name="resetPasswordInfo">Wpisz numer telefonu i przejdź dalej aby potwierdzić tożsamość</string>
    <string name="newPassword">Nowe hasło</string>
    <string name="confirmNewPassword">Potwiedź nowe hasło</string>
    <string name="rememberMe">Zapamiętaj mnie</string>
    <string name="goNext">Przejdź dalej</string>
    <string name="sendTicket">Wyślij zgłoszenie</string>
    <string name="checkHistory">Sprawdź historie</string>
    <string name="checkProfile">Sprawdź profil</string>
    <string name="submitTicket">Wyślij zgłoszenie</string>
    <string name="userPhone">Zalogowany jako:</string>
    <string name="placeName">Miejsce usterki:</string>
    <string name="actionName">Rodzaj usterki:</string>
    <string name="infoText">Szczegóły zgłoszenia</string>

    <string name="workersHistory">Historia Wszystkich zgłoszeń</string>
    <string name="alertList">Lista zgłoszeń</string>
    <string name="status_ticket">Status:</string>
    <string name="data_ticket">Data utowrzenia</string>
    <string name="action_ticket">Rodzaj usterki</string>
    <string name="place_ticket">Miejsce zdarzenia</string>
    <string name="info_ticket">Dodatkowe informacje</string>

    <string name="historyText">Historia zgłoszeń</string>
    <string name="date">Zgłoszono</string>
    <string name="place">Miejsce</string>
    <string name="action">Rodzaj</string>
    <string name="status">Status</string>
    <string name="profileInfo">Szczegóły profilu</string>


    <string-array name="cities_array">
        <item>Tczew</item>
    </string-array>
</resources>