<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lign_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:srcCompat="@drawable/messenger_icon2" />

        <LinearLayout
            android:id="@+id/panel_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_et"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:elevation="1dp"
            >

            <EditText
                android:id="@+id/emailRegister_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccentLogin"
                android:drawableStart="@drawable/dogtag_icon"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColorHint="@color/colorTransparentWhite"
                android:textSize="@dimen/login_textSize" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccentLogin"
                android:drawableStart="@drawable/password_icon"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorTransparentWhite"
                android:textSize="@dimen/login_textSize" />

            <LinearLayout
                android:id="@+id/forgotPassword_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/resetPasswordtxt_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/forgotPasswordtxt"
                    android:textAlignment="center"
                    android:textSize="@dimen/login_textSize" />

                <TextView
                    android:id="@+id/resetPassword_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:text="@string/forgotPasswordTv"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccentLogin"
                    android:textSize="@dimen/login_textSize" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_btn"
                android:elevation="10dp"
                android:text="@string/login_btn"
                android:textSize="@dimen/login_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/noAccounttxt_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noAccount"
                    android:textAlignment="center"
                    android:layout_marginVertical="8dp"
                    android:textSize="@dimen/login_textSize"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/noAccount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:text="@string/SignUp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccentLogin"
                    android:textSize="@dimen/login_textSize" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>