<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/lign_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="390dp"
            android:layout_height="312dp"
            app:srcCompat="@drawable/logo_miasto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="103dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/staatliches_font"
                android:gravity="center_horizontal|top"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/login_textSize" />

            <EditText
                android:id="@+id/emailRegister_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_et"
                android:drawableStart="@drawable/dogtag_icon"
                android:ems="10"
                android:hint="@string/enterEmail"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/login_textSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="103dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/staatliches_font"
                android:gravity="center_horizontal|top"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/login_textSize" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_et"
                android:drawableStart="@drawable/password_icon"
                android:ems="10"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/login_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cnfPassword_tv"
                android:layout_width="180dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/staatliches_font"
                android:gravity="center_horizontal|top"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/login_textSize" />

            <EditText
                android:id="@+id/cnfPassword_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_et"
                android:drawableStart="@drawable/password_icon"
                android:ems="10"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/login_textSize" />

        </LinearLayout>

        <Button
            android:id="@+id/goSignIn"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/login_btn"
            android:elevation="4dp"
            android:onClick="goToSignUp"
            android:fontFamily="@font/staatliches_font"
            android:text="@string/goSignIn"
            android:textColor="@color/colorWhite"
            android:textFontWeight="400"
            android:textSize="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/alreadyHaveAccount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="64dp"
                android:text="@string/alreadyHaveAccount"
                android:textAlignment="center"
                android:textSize="@dimen/login_textSize" />

            <TextView
                android:id="@+id/haveAccount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                android:onClick="goToLoginScreen"
                android:text="@string/login_btn"
                android:textAlignment="center"
                android:textColor="@color/colorAccentLogin"
                android:textSize="@dimen/login_textSize" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>